--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> 
 	
+	<script src="pubsub.js"></script>
 	<script src="common.js"></script>
+
 </body>
 </html>
